# ml-portfolio-app

./: .env.example  .gitignore  .mailmap  MlPortfolio.slnx  README.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
backend/: .dockerignore  ARCHITECTURE.md  Dockerfile  MlPortfolio.Api.csproj  MlPortfolio.Api.http  Program.cs  README.md  appsettings.Development.json  appsettings.json  fly.toml
backend/Configuration/: JwtOptions.cs  MlServiceOptions.cs
backend/Controllers/: AuthController.cs  PredictController.cs  ProjectsController.cs  README.md  UsersController.cs
backend/DTOs/: AuthDtos.cs  ProjectDtos.cs  README.md  UserDtos.cs
backend/Exceptions/: ConflictException.cs  ForbiddenAccessException.cs  MlServiceExceptions.cs  (+1 more)
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  eslint.config.js  fly.toml  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
ml-service/: .dockerignore  Dockerfile  README.md  fly.toml  pyproject.toml
ml-service/app/: cleaning.py  main.py  registry.py  schemas.py
ml-service/app/predictors/: __init__.py  distilbert.py  vit.py
ml-service/app/routers/: health.py  predict.py
ml-service/scripts/: artifact-init.sh  entrypoint.sh
ml-service/tests/: conftest.py  test_api.py  test_cleaning.py
ml-service/tests/fixtures/: build_mini_bundle.py
ml-service/tests/fixtures/distilbert-cfpb-mini/: calibration.json  config.json  model.onnx  tokenizer.json
ml-service/tests/fixtures/vit-cifar10-mini/: vit_best.onnx
scripts/: backend-test.sh
(+75 files in other folders)
