[project]
name = "ml-service"
version = "0.1.0"
description = "FastAPI inference layer for the ML Portfolio — a pluggable predictor host serving ONNX models behind a uniform envelope."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
    "onnxruntime>=1.20.0",
    "tokenizers>=0.21.0",
    "numpy>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]